--- a/Portfolio Style.css
+++ b/Portfolio Style.css
@@ -2,12 +2,11 @@ body {
 font-family: sans-serif;
 padding: 1em;
 max-width: 600px;
-background-color: rgb(68, 58, 82);
 }
 h1 {
 font-size: 180%;
 background-color: rgb(68, 58, 82);
-color: #0033cc;
+color: #000000;
 }
 h2 {
 font-size: 140%;
