changed to beige

--- a/Portfolio Style.css
+++ b/Portfolio Style.css
@@ -2,7 +2,7 @@ body {
 font-family: sans-serif;
 padding: 1em;
 max-width: 600px;
-background-color: purple
+background-color: beige;
 }
 h1 {
 font-size: 180%;
