changed footer bg color

--- a/Portfolio Style.css
+++ b/Portfolio Style.css
@@ -17,6 +17,6 @@ list-style-type: square;
 }
 footer {
 font-size: medium;
-color: #7209af;
-background-color: rgb(0, 0, 0);
+background-color: black;
+color: aqua;
 }
